--- a/views/student/layouts/recommendation.ejs
+++ b/views/student/layouts/recommendation.ejs
@@ -16,73 +16,81 @@
                         <h2>บทที่ 1 <%= RecommendaResult[0].RecommendCourse %></h2>
                         <% if(pre1done >= 1 ){ %>
                                 <p>ด้าน Knowledge, Tracing และ Explaining จะต้องได้อย่างน้อย 3 คะแนน จึงจะแนะนำบทเรียนถัดไป</p> <br>
-                                <button onclick="window.location.href='/course-Algorithms_and_Flowcharts'" type="button" class="btn btn-outline-dark btn-lg btn-block mb-2"> <i class="fa fa-paper-plane" style="font-size:16px"></i>เข้าสู่เนื้อหา</button>     
+                                <button onclick="window.location.href='/course-Algorithms_and_Flowcharts'" type="button" class="btn btn-outline-dark btn-lg btn-block mb-2"> <i class="fa fa-paper-plane" style="font-size:16px"></i>Algorithms and Flowcharts</button>     
                         <% } else{ %> 
-                                <button onclick="window.location.href='/course-Algorithms_and_Flowcharts-pre-test'" type="button" class="btn btn-outline-dark btn-lg btn-block mb-2"> <i class="fa fa-paper-plane" style="font-size:16px"></i> แบบทดสอบก่อนเรียน</button>  
+                                <p>แบบฝึกหัดก่อนเรียน</p>
+                                <button onclick="window.location.href='/course-Algorithms_and_Flowcharts-pre-test'" type="button" class="btn btn-outline-dark btn-lg btn-block mb-2"> <i class="fa fa-paper-plane" style="font-size:16px"></i> Algorithms and Flowcharts</button>  
                         <% } %>
                 <!--2-->
                     <% }else if(RecommendaResult[0].RecommendCourse === "Datatype and Variable"){ %>
                         <h2>บทที่ 2 <%= RecommendaResult[0].RecommendCourse %></h2>
                         <% if(pre2done >= 1 ){ %>
                                 <p>ด้าน Knowledge, Tracing และ Explaining จะต้องได้อย่างน้อย 3 คะแนน จึงจะแนะนำบทเรียนถัดไป</p> <br>
-                                <button onclick="window.location.href='/course-Datatype_and_Variable'" type="button" class="btn btn-outline-dark btn-lg btn-block mb-2"><i class="fa fa-paper-plane" style="font-size:16px"></i>เข้าสู่เนื้อหา</button>
+                                <button onclick="window.location.href='/course-Datatype_and_Variable'" type="button" class="btn btn-outline-dark btn-lg btn-block mb-2"><i class="fa fa-paper-plane" style="font-size:16px"></i>Datatype and Variable</button>
                         <% } else{ %> 
+                                <p>แบบฝึกหัดก่อนเรียน</p>
                                  <button onclick="window.location.href='/course-Datatype_and_Variable-pretest'" type="button" class="btn btn-outline-dark btn-lg btn-block mb-2"> <i class="fa fa-paper-plane" style="font-size:16px"></i> แบบทดสอบก่อนเรียน</button>  
                         <% } %>
                 
                 <!--3-->
                     <% }else if(RecommendaResult[0].RecommendCourse === "Input and Output"){ %>
                         <h2>บทที่ 3 <%= RecommendaResult[0].RecommendCourse %></h2>
-                        <% if(pre2done >= 1 ){ %>
+                        <% if(pre3done >= 1 ){ %>
                                 <p>ด้าน Knowledge, Tracing และ Explaining จะต้องได้อย่างน้อย 3 คะแนน จึงจะแนะนำบทเรียนถัดไป</p> <br>
-                                <button onclick="window.location.href='/course-Input_and_Output'" type="button" class="btn btn-outline-dark btn-lg btn-block mb-2"><i class="fa fa-paper-plane" style="font-size:16px"></i>เข้าสู่เนื้อหา</button>
+                                <button onclick="window.location.href='/course-Input_and_Output'" type="button" class="btn btn-outline-dark btn-lg btn-block mb-2"><i class="fa fa-paper-plane" style="font-size:16px"></i>Input and Output</button>
                         <% } else{ %> 
-                                 <button onclick="window.location.href='/course-Input_and_Output-pretest'" type="button" class="btn btn-outline-dark btn-lg btn-block mb-2"> <i class="fa fa-paper-plane" style="font-size:16px"></i> แบบทดสอบก่อนเรียน</button>  
+                                <p>แบบฝึกหัดก่อนเรียน</p>
+                                 <button onclick="window.location.href='/course-Input_and_Output-pretest'" type="button" class="btn btn-outline-dark btn-lg btn-block mb-2"> <i class="fa fa-paper-plane" style="font-size:16px"></i> Input and Output</button>  
                         <% } %>
                 <!--4-->
                     <% }else if(RecommendaResult[0].RecommendCourse === "Operators and Expressions"){ %>
                         <h2>บทที่ 4 <%= RecommendaResult[0].RecommendCourse %></h2>
-                        <% if(pre2done >= 1 ){ %>
+                        <% if(pre4done >= 1 ){ %>
                                 <p>ด้าน Knowledge, Tracing และ Explaining จะต้องได้อย่างน้อย 3 คะแนน จึงจะแนะนำบทเรียนถัดไป</p> <br>
-                                <button onclick="window.location.href='/course-Operators_and_Expressions'" type="button" class="btn btn-outline-dark btn-lg btn-block mb-2"><i class="fa fa-paper-plane" style="font-size:16px"></i>เข้าสู่เนื้อหา</button>
+                                <button onclick="window.location.href='/course-Operators_and_Expressions'" type="button" class="btn btn-outline-dark btn-lg btn-block mb-2"><i class="fa fa-paper-plane" style="font-size:16px"></i>Operators and Expressions</button>
                         <% } else{ %> 
-                                 <button onclick="window.location.href='/course-Operators_and_Expressions-pretest'" type="button" class="btn btn-outline-dark btn-lg btn-block mb-2"> <i class="fa fa-paper-plane" style="font-size:16px"></i> แบบทดสอบก่อนเรียน</button>  
+                                <p>แบบฝึกหัดก่อนเรียน</p>
+                                 <button onclick="window.location.href='/course-Operators_and_Expressions-pretest'" type="button" class="btn btn-outline-dark btn-lg btn-block mb-2"> <i class="fa fa-paper-plane" style="font-size:16px"></i> Operators and Expressions</button>  
                         <% } %>
                 <!--5-->
                     <% }else if(RecommendaResult[0].RecommendCourse === "Selection Statements"){ %>
                         <h2>บทที่ 5 <%= RecommendaResult[0].RecommendCourse %></h2>
-                        <% if(pre2done >= 1 ){ %>
+                        <% if(pre5done >= 1 ){ %>
                                 <p>ด้าน Knowledge, Tracing และ Explaining จะต้องได้อย่างน้อย 3 คะแนน จึงจะแนะนำบทเรียนถัดไป</p> <br>
-                                <button onclick="window.location.href='/course-Selection_Statements'" type="button" class="btn btn-outline-dark btn-lg btn-block mb-2"><i class="fa fa-paper-plane" style="font-size:16px"></i>เข้าสู่เนื้อหา</button>
+                                <button onclick="window.location.href='/course-Selection_Statements'" type="button" class="btn btn-outline-dark btn-lg btn-block mb-2"><i class="fa fa-paper-plane" style="font-size:16px"></i>Selection Statements</button>
                         <% } else{ %> 
-                                 <button onclick="window.location.href='/course-Selection_Statements-pretest'" type="button" class="btn btn-outline-dark btn-lg btn-block mb-2"> <i class="fa fa-paper-plane" style="font-size:16px"></i> แบบทดสอบก่อนเรียน</button>  
+                                <p>แบบฝึกหัดก่อนเรียน</p>
+                                 <button onclick="window.location.href='/course-Selection_Statements-pretest'" type="button" class="btn btn-outline-dark btn-lg btn-block mb-2"> <i class="fa fa-paper-plane" style="font-size:16px"></i> Selection Statements</button>  
                         <% } %>
                 <!--6-->
                     <% }else if(RecommendaResult[0].RecommendCourse === "Loop Statements"){ %>
                         <h2>บทที่ 6 <%= RecommendaResult[0].RecommendCourse %></h2>
-                        <% if(pre2done >= 1 ){ %>
+                        <% if(pre6done >= 1 ){ %>
                                 <p>ด้าน Knowledge, Tracing และ Explaining จะต้องได้อย่างน้อย 3 คะแนน จึงจะแนะนำบทเรียนถัดไป</p> <br>
-                                <button onclick="window.location.href='/course-Loop_Statements'" type="button" class="btn btn-outline-dark btn-lg btn-block mb-2"><i class="fa fa-paper-plane" style="font-size:16px"></i>เข้าสู่เนื้อหา</button>
+                                <button onclick="window.location.href='/course-Loop_Statements'" type="button" class="btn btn-outline-dark btn-lg btn-block mb-2"><i class="fa fa-paper-plane" style="font-size:16px"></i>Loop Statements</button>
                         <% } else{ %> 
-                                 <button onclick="window.location.href='/course-Loop_Statements-pretest'" type="button" class="btn btn-outline-dark btn-lg btn-block mb-2"> <i class="fa fa-paper-plane" style="font-size:16px"></i> แบบทดสอบก่อนเรียน</button>  
+                                <p>แบบฝึกหัดก่อนเรียน</p>
+                                 <button onclick="window.location.href='/course-Loop_Statements-pretest'" type="button" class="btn btn-outline-dark btn-lg btn-block mb-2"> <i class="fa fa-paper-plane" style="font-size:16px"></i> Loop Statements</button>  
                         <% } %>
                 <!--7-->
                     <% }else if(RecommendaResult[0].RecommendCourse === "Arrays and Strings"){ %>
                         <h2>บทที่ 7 <%= RecommendaResult[0].RecommendCourse %></h2>
-                        <% if(pre2done >= 1 ){ %>
+                        <% if(pre7done >= 1 ){ %>
                                 <p>ด้าน Knowledge, Tracing และ Explaining จะต้องได้อย่างน้อย 3 คะแนน จึงจะแนะนำบทเรียนถัดไป</p> <br>
-                                <button onclick="window.location.href='/course-Arrays_and_Strings'" type="button" class="btn btn-outline-dark btn-lg btn-block mb-2"><i class="fa fa-paper-plane" style="font-size:16px"></i>เข้าสู่เนื้อหา</button>
+                                <button onclick="window.location.href='/course-Arrays_and_Strings'" type="button" class="btn btn-outline-dark btn-lg btn-block mb-2"><i class="fa fa-paper-plane" style="font-size:16px"></i>Arrays and Strings</button>
                         <% } else{ %> 
-                                 <button onclick="window.location.href='/course-Arrays_and_Strings-pretest'" type="button" class="btn btn-outline-dark btn-lg btn-block mb-2"> <i class="fa fa-paper-plane" style="font-size:16px"></i> แบบทดสอบก่อนเรียน</button>  
+                                <p>แบบฝึกหัดก่อนเรียน</p>
+                                 <button onclick="window.location.href='/course-Arrays_and_Strings-pretest'" type="button" class="btn btn-outline-dark btn-lg btn-block mb-2"> <i class="fa fa-paper-plane" style="font-size:16px"></i> Arrays and Strings</button>  
                         <% } %>
                 <!--8-->
                     <% }else if(RecommendaResult[0].RecommendCourse === "Functions"){ %>
                         <h2>บทที่ 8 <%= RecommendaResult[0].RecommendCourse %></h2>
-                        <% if(pre2done >= 1 ){ %>
+                        <% if(pre8done >= 1 ){ %>
                                 <p>ด้าน Knowledge, Tracing และ Explaining จะต้องได้อย่างน้อย 3 คะแนน จึงจะแนะนำบทเรียนถัดไป</p> <br>
-                                <button onclick="window.location.href='/course-Functions'" type="button" class="btn btn-outline-dark btn-lg btn-block mb-2"><i class="fa fa-paper-plane" style="font-size:16px"></i>เข้าสู่เนื้อหา</button>
+                                <button onclick="window.location.href='/course-Functions'" type="button" class="btn btn-outline-dark btn-lg btn-block mb-2"><i class="fa fa-paper-plane" style="font-size:16px"></i>Functions</button>
                         <% } else{ %> 
-                                 <button onclick="window.location.href='/course-Functions-pretest'" type="button" class="btn btn-outline-dark btn-lg btn-block mb-2"> <i class="fa fa-paper-plane" style="font-size:16px"></i> แบบทดสอบก่อนเรียน</button>  
+                                <p>แบบฝึกหัดก่อนเรียน</p>
+                                 <button onclick="window.location.href='/course-Functions-pretest'" type="button" class="btn btn-outline-dark btn-lg btn-block mb-2"> <i class="fa fa-paper-plane" style="font-size:16px"></i> Functions</button>  
                         <% } %>
 
                     <% } else{ %>  <%# ถ้าไม่มีการแนะนำ คือ เรียนตาม path ที่เลือกเรียบร้อยแล้ว%> 
