--- a/views/teacher/layouts/navbar.ejs
+++ b/views/teacher/layouts/navbar.ejs
@@ -25,6 +25,9 @@
     .navshadow {
       box-shadow: 0 0 15px 5px #cd7161;
     } 
+    a {
+      color: black;
+    }
 </style>
 
 <!-- Narbar-->
