--- a/views/teacher/TeacherCourse.ejs
+++ b/views/teacher/TeacherCourse.ejs
@@ -37,7 +37,7 @@
         }
         .linkpretest{
             text-decoration: none;
-            background-color: #ffdbaf;
+            background-color: #b898d4;
             color: black;
             font-size: 20px;
             padding: 10px;
@@ -57,7 +57,6 @@
             grid-template-columns: 400px auto auto;
         }
         .group2{
-            background-color: #fefefe;
             padding: 10px;
             border-radius: 10px;
         }
@@ -74,7 +73,7 @@
 <body style="background-color: #cad19f;">
 <br><br><br>
 <div id = "content" class="container">
-    <h3>ให้คะแนนแบททดสอบ และ Project Quiz</h3>
+    <h3>Checking</h3>
     <div class="box">
         <a href="/check"><p class="link">แบบทดสอบก่อนเรียน-หลังเรียน</p></a>
         <a href="/checkQuiz"><p class="link">Project Quiz</p></a>
@@ -84,38 +83,38 @@
     
     
     <br>
-    <h3>เนื้อหาบทเรียน</h3>
+    <h3>Course</h3>
     <div class="group2">
         <div class="grid2">
-            <a href="/TeacherCourse-Algorithms_and_Flowcharts"><p class="link">1 Algorithms and Flowcharts</p></a>
+            <a href="/TeacherCourse-Algorithms_and_Flowcharts"><p class="link">1. Algorithms and Flowcharts</p></a>
             <a href="/TeacherCourse-Algorithms_and_Flowcharts-lab"><p class="linkpretest">แบบทดสอบ</p></a>
         </div>
         <div class="grid2">
-            <a href="/TeacherCourse-Datatype_and_Variable"><p class="link">2 Datatype and Variable</p></a>
+            <a href="/TeacherCourse-Datatype_and_Variable"><p class="link">2. Datatype and Variable</p></a>
             <a href="/TeacherCourse-Datatype_and_Variable-lab"><p class="linkpretest">แบบทดสอบ</p></a>
         </div>
         <div class="grid2">
-            <a href="/TeacherCourse-Input_and_Output"><p class="link">3 Input and Output</p></a>
+            <a href="/TeacherCourse-Input_and_Output"><p class="link">3. Input and Output</p></a>
             <a href="/TeacherCourse-Input_and_Output-lab"><p class="linkpretest">แบบทดสอบ</p></a>
         </div>
         <div class="grid2">
-            <a href="/TeacherCourse-Operators_and_Expressions"><p class="link">4 Operators and Expressions</p></a>
+            <a href="/TeacherCourse-Operators_and_Expressions"><p class="link">4. Operators and Expressions</p></a>
             <a href="/TeacherCourse-Operators_and_Expressions-lab"><p class="linkpretest">แบบทดสอบ</p></a>
         </div>
         <div class="grid2">
-            <a href="/TeacherCourse-Selection_Statements"><p class="link">5 Selection Statements</p></a>
+            <a href="/TeacherCourse-Selection_Statements"><p class="link">5. Selection Statements</p></a>
             <a href="/TeacherCourse-Selection_Statements-lab"><p class="linkpretest">แบบทดสอบ</p></a>
         </div>
         <div class="grid2">
-            <a href="/TeacherCourse-Loop_Statements"><p class="link">6 Loop Statements</p></a>
+            <a href="/TeacherCourse-Loop_Statements"><p class="link">6. Loop Statements</p></a>
             <a href="/TeacherCourse-Loop_Statements-lab"><p class="linkpretest">แบบทดสอบ</p></a>
         </div>
         <div class="grid2">
-            <a href="/TeacherCourse-Arrays_and_Strings"><p class="link">7 Array and String</p></a>
+            <a href="/TeacherCourse-Arrays_and_Strings"><p class="link">7. Array and String</p></a>
             <a href="/TeacherCourse-Arrays_and_Strings-lab"><p class="linkpretest">แบบทดสอบ</p></a>
         </div>
         <div class="grid2">
-            <a href="/TeacherCourse-Functions"><p class="link">8 Functions</p></a>
+            <a href="/TeacherCourse-Functions"><p class="link">8. Functions</p></a>
             <a href="/TeacherCourse-Functions-lab"><p class="linkpretest">แบบทดสอบ</p></a>
         </div>
     </div>
@@ -123,10 +122,10 @@
     <br>
     <h3>Project Quiz</h3>
     <div class="grid3">
-        <a href="/TeacherCourse-Ticket_Booking_System"><p class="link">Project Quiz 1</p></a>
-        <a href="/TeacherCourse-Point_of_Sales_System"><p class="link">Project Quiz 2</p></a>
+        <a href="/TeacherCourse-Ticket_Booking_System"><p class="link"><b>Quiz 1 |</b> Ticket Booking System</p></a>
+        <a href="/TeacherCourse-Point_of_Sales_System"><p class="link"><b>Quiz 2 |</b> Point of Sales System</p></a>
         <div></div>
-        <a href="/TeacherCourse-Project_QUIZ3"><p class="link">Project Quiz 3</p></a>
+        <a href="/TeacherCourse-Project_QUIZ3"><p class="link"><b>Quiz 3 |</b> Stock Management System</p></a>
     </div>
 
 </div>
