--- a/views/student/layouts/project-middle.ejs
+++ b/views/student/layouts/project-middle.ejs
@@ -49,7 +49,8 @@
         <div class="accordion" id="accordionParentSyntax">
             <!--   Introduce -->
             <div id="collapseIntroduce" class="accordion-collapse show project shadow" style="background-color: #bd7b67;" data-bs-parent="#accordionParentSyntax">
-                <h1>Project Quiz</h1> <!--
+                <h1>Project Quiz</h1>
+                <h2 style="color: #fff; font-size: large;">ด้าน Knowledge, Tracing และ Explaining จะต้องได้อย่างน้อย 3 คะแนน ขึ้นไป</h2> <!--
                 <ol class="breadcrumb" style="background-color: #3a4e93;">
                     <li class="breadcrumb-item"><i href="/home" class="fa fa-home" style="font-size:16px"></i></li>
                     <li class="breadcrumb-item active" aria-current="page">Project</li>
